# Ai_Calendar

./: .gitignore  README.md  main.py  pyproject.toml  开发文档
.trae/rules/: project_rules.md
ai_calendar_app/: README.md  pubspec.yaml
ai_calendar_app/android/app/: build.gradle.kts
ai_calendar_app/ios/Runner/: Info.plist
ai_calendar_app/ios/Runner.xcodeproj/: project.pbxproj
ai_calendar_app/lib/: main.dart
ai_calendar_app/lib/controllers/: assistant_ctrl.dart  calendar_ctrl.dart  report_ctrl.dart  user_ctrl.dart
ai_calendar_app/lib/models/: conversation.dart  event.dart  report.dart  user.dart
ai_calendar_app/lib/services/: api_service.dart  audio_player.dart  (+3 more)
ai_calendar_app/linux/: CMakeLists.txt
ai_calendar_app/test/: local_db_test.dart  models_test.dart  widget_test.dart  widgets_test.dart
ai_calendar_app/web/: index.html
backend/agent/: adapter.py  llm_client.py  prompts.py  tool_executor.py  tools.py
backend/api/: deps.py
backend/core/: config.py  database.py  security.py
backend/models/: models.py
backend/scheduler/: report_cron.py
backend/schemas/: agent.py  auth.py  event.py  report.py
backend/services/: asr_service.py  event_engine.py  tts_service.py
backend/websocket/: handler.py
tests/: run_all_tests.py  test_01_database.py  test_02_security.py  test_03_auth_api.py  test_04_events_api.py  test_05_event_engine.py  test_06_tts.py  test_07_agent.py  test_08_websocket.py  test_09_report.py  test_10_health.py  test_11_agent_tools.py  test_12_tool_executor.py  test_13_agent_prompts.py  test_14_agent_llm.py  test_15_agent_react.py
(+20 files in other folders)
