[project]
name = "ai-calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.2",
    "bcrypt>=5.0.0",
    "cryptography>=48.0.0",
    "edge-tts>=7.2.8",
    "fastapi>=0.136.1",
    "funasr>=1.3.1",
    "httpx>=0.28.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "pymysql>=1.1.3",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.28",
    "sqlalchemy>=2.0.49",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "uvicorn[standard]>=0.47.0",
    "websockets>=16.0",
]
